# Isen-t-it

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.web  LICENSE  README.md  run.sh
.github/workflows/: client.yml  production.yml  server.yml
.keys/: hash
docs/: developpement.md  installation.md  jeux.md  organisation.md  sommaire.md
docs/extra/: git.md
examples/: test.rs
src/: collisions.rs  composants.rs  debug.rs  joueur.rs  lib.rs  lumieres.rs  main.rs  performance.rs  scene.rs  systems.rs
src/debug/: information.rs  mod.rs
src/interactions/: mod.rs
src/joueur/: animation.rs  composants.rs  mod.rs  mouvements.rs
src/monde/: ascensceurs.rs  mod.rs  scene.rs
src/network/: mod.rs
web/: index.html
