[package]
name = "isent_it"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_light_2d = "0.4.2"
bevy_editor_pls = "0.10.0"


[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3