[package]
name = "isent_it"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
aeronet = "0.11.0"
aeronet_webtransport = { version = "0.11.0", features = ["client", "server"] }
rand = "0.8.5"
serde = "1.0.215"
bincode = "1.3.3"


[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
